Added Silver Ingot

--- a/src/main/resources/assets/agrypyrosmod/lang/fr_fr.json
+++ b/src/main/resources/assets/agrypyrosmod/lang/fr_fr.json
@@ -1,3 +1,4 @@
 {
-  "item.agrypyrosmod.raw_silver": "Argent Brut"
+  "item.agrypyrosmod.raw_silver": "Argent Brut",
+  "item.agrypyrosmod.silver_ingot": "Lingot d'Argent"
 }
