--- a/src/main/resources/assets/agrypyrosmod/lang/en_us.json
+++ b/src/main/resources/assets/agrypyrosmod/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "item.agrypyrosmod.raw_silver": "Raw Silver"
+  "item.agrypyrosmod.raw_silver": "Raw Silver",
+  "item.agrypyrosmod.silver_ingot": "Silver Ingot"
 }
