Added Silver Block

--- a/src/main/resources/assets/agrypyrosmod/lang/en_us.json
+++ b/src/main/resources/assets/agrypyrosmod/lang/en_us.json
@@ -4,6 +4,7 @@
 
   "block.agrypyrosmod.silver_ore": "Silver Ore",
   "block.agrypyrosmod.deepslate_silver_ore": "Deepslate Silver Ore",
+  "block.agrypyrosmod.silver_block": "Silver Block",
 
   "itemGroup.agrypyrosmodtab": "Agrypyros"
 }
