--- a/src/main/resources/assets/agrypyrosmod/lang/fr_fr.json
+++ b/src/main/resources/assets/agrypyrosmod/lang/fr_fr.json
@@ -4,6 +4,7 @@
 
   "block.agrypyrosmod.silver_ore": "Minerai d'Argent",
   "block.agrypyrosmod.deepslate_silver_ore": "Minerai d'Argent des Abîmes",
+  "block.agrypyrosmod.silver_block": "Bloc d'Argent",
 
   "itemGroup.agrypyrosmodtab": "Agrypyros"
 }
