--- a/src/main/resources/assets/agrypyrosmod/lang/en_us.json
+++ b/src/main/resources/assets/agrypyrosmod/lang/en_us.json
@@ -1,10 +1,13 @@
 {
   "item.agrypyrosmod.raw_silver": "Raw Silver",
   "item.agrypyrosmod.silver_ingot": "Silver Ingot",
+  "item.agrypyrosmod.barley_seeds": "Barley Seeds",
+  "item.agrypyrosmod.barley": "Barley",
 
   "block.agrypyrosmod.silver_ore": "Silver Ore",
   "block.agrypyrosmod.deepslate_silver_ore": "Deepslate Silver Ore",
   "block.agrypyrosmod.silver_block": "Silver Block",
+  "block.agrypyrosmod.barley_crop": "Barley Crop",
 
   "itemGroup.agrypyrosmodtab": "Agrypyros"
 }
