Added Hay Slab and Stairs

--- a/src/main/resources/assets/agrypyrosmod/lang/en_us.json
+++ b/src/main/resources/assets/agrypyrosmod/lang/en_us.json
@@ -34,6 +34,8 @@
   "item.agrypyrosmod.bronze_chestplate": "Bronze Chestplate",
   "item.agrypyrosmod.bronze_leggings": "Bronze Leggings",
   "item.agrypyrosmod.bronze_boots": "Bronze Boots",
+  "item.agrypyrosmod.raw_boar": "Raw Boar",
+  "item.agrypyrosmod.cooked_boar": "Cooked Boar",
 
   "block.agrypyrosmod.silver_ore": "Silver Ore",
   "block.agrypyrosmod.deepslate_silver_ore": "Deepslate Silver Ore",
@@ -52,6 +54,36 @@
   "block.agrypyrosmod.limestone_bricks": "Limestone Bricks",
   "block.agrypyrosmod.chiseled_limestone": "Chiseled Limestone",
   "block.agrypyrosmod.mossy_limestone_bricks": "Mossy Limestone Bricks",
+  "block.agrypyrosmod.clay_tiles": "Clay Tiles",
+  "block.agrypyrosmod.white_clay_tiles": "White Clay Tiles",
+  "block.agrypyrosmod.orange_clay_tiles": "Orange Clay Tiles",
+  "block.agrypyrosmod.magenta_clay_tiles": "Magenta Clay Tiles",
+  "block.agrypyrosmod.light_blue_clay_tiles": "Light Blue Clay Tiles",
+  "block.agrypyrosmod.yellow_clay_tiles": "Yellow Clay Tiles",
+  "block.agrypyrosmod.lime_clay_tiles": "Lime Clay Tiles",
+  "block.agrypyrosmod.pink_clay_tiles": "Pink Clay Tiles",
+  "block.agrypyrosmod.gray_clay_tiles": "Gray Clay Tiles",
+  "block.agrypyrosmod.light_gray_clay_tiles": "Light Gray Clay Tiles",
+  "block.agrypyrosmod.cyan_clay_tiles": "Cyan Clay Tiles",
+  "block.agrypyrosmod.purple_clay_tiles": "Purple Clay Tiles",
+  "block.agrypyrosmod.blue_clay_tiles": "Blue Clay Tiles",
+  "block.agrypyrosmod.brown_clay_tiles": "Brown Clay Tiles",
+  "block.agrypyrosmod.green_clay_tiles": "Green Clay Tiles",
+  "block.agrypyrosmod.red_clay_tiles": "Red Clay Tiles",
+  "block.agrypyrosmod.black_clay_tiles": "Black Clay Tiles",
+  "block.agrypyrosmod.oak_wood_wall": "Oak Wood Wall",
+  "block.agrypyrosmod.spruce_wood_wall": "Spruce Wood Wall",
+  "block.agrypyrosmod.birch_wood_wall": "Birch Wood Wall",
+  "block.agrypyrosmod.jungle_wood_wall": "Jungle Wood Wall",
+  "block.agrypyrosmod.acacia_wood_wall": "Acacia Wood Wall",
+  "block.agrypyrosmod.dark_oak_wood_wall": "Dark Oak Wood Wall",
+  "block.agrypyrosmod.mangrove_wood_wall": "Mangrove Wood Wall",
+  "block.agrypyrosmod.limestone_slab": "Limestone Slab",
+  "block.agrypyrosmod.limestone_bricks_slab": "Limestone Bricks Slab",
+  "block.agrypyrosmod.limestone_stairs": "Limestone Stairs",
+  "block.agrypyrosmod.limestone_bricks_stairs": "Limestone Bricks Stairs",
+  "block.agrypyrosmod.hay_slab": "Hay Slab",
+  "block.agrypyrosmod.hay_stairs": "Hay Stairs",
 
   "itemGroup.agrypyrosmodtab": "Agrypyros"
 }
