--- a/src/main/resources/assets/agrypyrosmod/lang/fr_fr.json
+++ b/src/main/resources/assets/agrypyrosmod/lang/fr_fr.json
@@ -34,6 +34,8 @@
   "item.agrypyrosmod.bronze_chestplate": "Plastron en Bronze",
   "item.agrypyrosmod.bronze_leggings": "Jambières en Bronze",
   "item.agrypyrosmod.bronze_boots": "Bottes en Bronze",
+  "item.agrypyrosmod.raw_boar": "Sanglier Cru",
+  "item.agrypyrosmod.cooked_boar": "Sanglier Cuit",
 
   "block.agrypyrosmod.silver_ore": "Minerai d'Argent",
   "block.agrypyrosmod.deepslate_silver_ore": "Minerai d'Argent des Abîmes",
@@ -52,6 +54,36 @@
   "block.agrypyrosmod.limestone_bricks": "Briques de Calcaire",
   "block.agrypyrosmod.chiseled_limestone": "Calcaire Sculpté",
   "block.agrypyrosmod.mossy_limestone_bricks": "Briques de Calcaire Moussues",
+  "block.agrypyrosmod.clay_tiles": "Tuiles en Argile",
+  "block.agrypyrosmod.white_clay_tiles": "Tuiles en Argile Blanche",
+  "block.agrypyrosmod.orange_clay_tiles": "Tuiles en Argile Orange",
+  "block.agrypyrosmod.magenta_clay_tiles": "Tuiles en Argile Magenta",
+  "block.agrypyrosmod.light_blue_clay_tiles": "Tuiles en Argile Bleu Clair",
+  "block.agrypyrosmod.yellow_clay_tiles": "Tuiles en Argile Jaune",
+  "block.agrypyrosmod.lime_clay_tiles": "Tuiles en Argile Vert Clair",
+  "block.agrypyrosmod.pink_clay_tiles": "Tuiles en Argile en Rose",
+  "block.agrypyrosmod.gray_clay_tiles": "Tuiles en Argile Grise",
+  "block.agrypyrosmod.light_gray_clay_tiles": "Tuiles en Argile Gris Clair",
+  "block.agrypyrosmod.cyan_clay_tiles": "Tuiles en Argile Cyan",
+  "block.agrypyrosmod.purple_clay_tiles": "Tuiles en Argile Violette",
+  "block.agrypyrosmod.blue_clay_tiles": "Tuiles en Argile Bleue",
+  "block.agrypyrosmod.brown_clay_tiles": "Tuiles en Argile Marron",
+  "block.agrypyrosmod.green_clay_tiles": "Tuiles en Argile Verte",
+  "block.agrypyrosmod.red_clay_tiles": "Tuiles en Argile Rouge",
+  "block.agrypyrosmod.black_clay_tiles": "Tuiles en Argile Noire",
+  "block.agrypyrosmod.oak_wood_wall": "Muret en Bois de Chêne",
+  "block.agrypyrosmod.spruce_wood_wall": "Muret en Bois de Sapin",
+  "block.agrypyrosmod.birch_wood_wall": "Muret en Bois de Bouleau",
+  "block.agrypyrosmod.jungle_wood_wall": "Muret en Bois d'Acajou",
+  "block.agrypyrosmod.acacia_wood_wall": "Muret en Bois d'Acacia",
+  "block.agrypyrosmod.dark_oak_wood_wall": "Muret en Bois de Chêne Noir",
+  "block.agrypyrosmod.mangrove_wood_wall": "Muret en Bois de Palétuvier",
+  "block.agrypyrosmod.limestone_slab": "Dalle de Calcaire",
+  "block.agrypyrosmod.limestone_bricks_slab": "Dalle de Briques de Calcaire",
+  "block.agrypyrosmod.limestone_stairs": "Escaliers en Calcaire",
+  "block.agrypyrosmod.limestone_bricks_stairs": "Escaliers en Briques de Calcaire",
+  "block.agrypyrosmod.hay_slab": "Dalle de Paille",
+  "block.agrypyrosmod.hay_stairs": "Escaliers en Paille",
 
   "itemGroup.agrypyrosmodtab": "Agrypyros"
 }
